2010-10-24  Robert Larice
 * src/spicelib/devices/ndev/ndevset.c :
  use char* instead of void*

2010-10-24  Robert Larice
 * src/frontend/hpgl.c ,
 * src/frontend/plotting/plot5.c ,
 * src/frontend/plotting/x11.c ,
 * src/frontend/postsc.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c ,
 * src/include/graph.h ,
 * src/tclspice.c :
  struct member devdep, use void* instead of char*

2010-10-24  Robert Larice
 * src/frontend/help/readhelp.c ,
 * src/ngmultidec.c ,
 * src/tclspice.c :
  tmalloc usage, drop explicit (unsigned) cast
    later to be reinstated in a tmalloc wrapper macro

2010-10-24  Robert Larice
 * src/frontend/com_display.c ,
 * src/frontend/device.c ,
 * src/frontend/help/x11disp.c :
  tmalloc usage, minor usage unification

2010-10-24  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/frontend/plotting/graf.c ,
 * src/misc/util.c ,
 * src/spicelib/devices/cpl/cplsetup.c ,
 * src/spicelib/devices/soi3/soi3ask.c ,
 * src/spicelib/devices/txl/txlsetup.c ,
 * src/tclspice.c ,
 * src/xspice/evt/evtinit.c ,
 * src/xspice/evt/evtload.c ,
 * src/xspice/icm/xtraevt/int/udnfunc.c ,
 * src/xspice/icm/xtraevt/real/udnfunc.c ,
 * src/xspice/idn/idndig.c :
  cast the tmalloc, MALLOC, return value

2010-10-24  Robert Larice
 * src/misc/wlist.c ,
 * src/spicelib/devices/bsim3/b3set.c ,
 * src/spicelib/devices/bsim3soi/b4soiset.c ,
 * src/spicelib/devices/bsim4/b4set.c :
  fix incorrect usage of tmalloc/sizeof, incorrect indirection level

2010-10-24  Robert Larice
 * src/frontend/com_ahelp.c ,
 * src/frontend/com_display.c ,
 * src/frontend/com_help.c ,
 * src/frontend/help/readhelp.c ,
 * src/frontend/variable.c ,
 * src/frontend/vectors.c ,
 * src/misc/wlist.c :
  qsort() usage, drop cast of the first argument (which is a void *)

2010-10-24  Robert Larice
 * src/maths/sparse/spalloc.c ,
 * src/maths/sparse/spbuild.c ,
 * src/maths/sparse/spdefs.h ,
 * src/maths/sparse/spfactor.c ,
 * src/maths/sparse/spoutput.c ,